# Personality-Prediction-for-Conversation-Agents

./: .gitignore  .gitmodules  README.md
implementation/: README.md  pyproject.toml
implementation/Docker/: Dockerfile  docker-compose.yml  requirements.txt
implementation/audio/features/sample/classification_results/: classificationresults_0_5.npy  classificationresults_104_114.npy  classificationresults_10_14.npy  classificationresults_115_122.npy  classificationresults_123_138.npy  classificationresults_139_148.npy  classificationresults_149_157.npy  classificationresults_158_160.npy  classificationresults_15_16.npy  classificationresults_161_161.npy  classificationresults_162_172.npy  classificationresults_173_175.npy  classificationresults_176_179.npy  classificationresults_180_191.npy  classificationresults_18_19.npy  classificationresults_192_192.npy  classificationresults_193_198.npy  classificationresults_199_245.npy  classificationresults_20_37.npy  classificationresults_246_251.npy  classificationresults_252_277.npy  classificationresults_278_280.npy  classificationresults_279_372.npy  classificationresults_373_387.npy  classificationresults_38_39.npy  classificationresults_40_44.npy  classificationresults_45_59.npy  classificationresults_60_68.npy  classificationresults_69_72.npy  (+6 more)
implementation/notebooks/: 01_Preprocess_Two-Channel_Audio.ipynb  02_Dialog_Structure_Generation.ipynb  03_Emotion_Sentiment_Prediction.ipynb  04_Backchannel_Prediction.ipynb  05_Personality_Prediction.ipynb
implementation/pyfiles/: dialog.py  llmprediction.py
(+91 files in other folders)
