[project]
name = "implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab-vim==0.15.1",
    "jupyterlab==3.5.2",
    "openai==1.35.13",
    "numpy==1.26.4",
    "noisereduce==3.0.3",
    "pandas==1.5.3",
    "librosa==0.9.2",
    "pyloudnorm==0.1.0",
    "praatio==3.8.0",
    "nltk==3.8.1",
    "tensorboardx==1.9",
    "protobuf==3.20.3",
    "transformers==4.41.1",
    "huggingface-hub==0.23.1",
    "httpx==0.27.0",
    "openai-whisper",
    "torch>=2.6.0",
    "setuptools>=80.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
